@@ -233,6 +233,9 @@ Nicu Pavel
 Daryl Fonseca-Holt
 	- lis driver
 
+Thien Vu
+	- shuttleVFD driver
+
 
 Further developers in the sourceforge lcdproc team:
 Mindaugas Idzelis       aim4min
