@@ -48,7 +48,8 @@ DriverPath=server/drivers/
 #   EyeboxOne, g15, glcdlib, glk, hd44780, icp_a106, imon, IOWarrior,
 #   irman, joy, lb216, lcdm001, lcterm, lirc, MD8800, ms6931, mtc_s16209x,
 #   MtxOrb, NoritakeVFD, picolcd, pyramid, sed1330, sed1520, serialPOS,
-#   serialVFD, sli, stv5730, svga, t6963, text, tyan, ula200, xosd
+#   serialVFD, shuttleVFD, sli, stv5730, svga, t6963, text, tyan, ula200,
+#   xosd
 Driver=curses
 
 # Tells the driver to bind to the given interface
@@ -870,7 +871,9 @@ Speed=9600
 # enable ISO 8859 1 compatibility [default: yes; legal: yes, no]
 #ISO_8859_1=yes
 
-
+## shuttleVFD driver ##
+[shuttleVFD]
+# No options
 
 ## stv5730 driver ##
 [stv5730]
