@@ -40,6 +40,7 @@ well as the configuration of LCDd.
 &sed1520;
 &serialPOS;
 &serialVFD;
+&shuttleVFD;
 &sli;
 &stv5730;
 &svga;
